# ragnarok

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: documents.py
backend/app/chunking/: engine.py  schemas.py
backend/app/core/: config.py
backend/app/ingestion/: factory.py  schemas.py  service.py
backend/app/ingestion/extractors/: csv_extractor.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py
backend/tests/: test_chunking_engine.py  test_documents_api.py  test_docx_extractor.py  test_ingestion_factory.py  test_pdf_extractor.py  test_pptx_extractor.py  test_text_extractors.py
backend/tests/fixtures/: README.md  basic-html.html  basic-markdown.md  basic-text.docx  multi-slide.pptx  single-slide.pptx  slide-with-notes.pptx  table-text.docx
docs/architecture/: 0001-tech-stack-overview.md
